[gd_scene load_steps=16 format=3 uid="uid://22cmh8g35xpw"]

[ext_resource type="PackedScene" uid="uid://dm2aslc332d3t" path="res://objects/enemy/base_enemy/base_enemy.tscn" id="1_gqdw6"]
[ext_resource type="Script" path="res://objects/enemy/retractable_spikes/spikes.gd" id="2_3vmbi"]
[ext_resource type="Texture2D" uid="uid://d2l07ya2cg7r6" path="res://objects/enemy/retractable_spikes/Spike_B.png" id="2_ki5q2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iq6qa"]
atlas = ExtResource("2_ki5q2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hkbt"]
atlas = ExtResource("2_ki5q2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0873q"]
atlas = ExtResource("2_ki5q2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qw70"]
atlas = ExtResource("2_ki5q2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1pnp"]
atlas = ExtResource("2_ki5q2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awlga"]
atlas = ExtResource("2_ki5q2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbsy4"]
atlas = ExtResource("2_ki5q2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjkns"]
atlas = ExtResource("2_ki5q2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7rnx"]
atlas = ExtResource("2_ki5q2")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4cos"]
atlas = ExtResource("2_ki5q2")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixvqv"]
atlas = ExtResource("2_ki5q2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_conrt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq6qa")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_7hkbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0873q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qw70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1pnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awlga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbsy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjkns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7rnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4cos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixvqv")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Spikes" instance=ExtResource("1_gqdw6")]
position = Vector2(-16, -2)
script = ExtResource("2_3vmbi")

[node name="ColorRect" parent="." index="0"]
visible = false

[node name="CollisionShape2D" parent="hitBox" index="0"]
position = Vector2(16, 6)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
position = Vector2(16, 7)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_conrt")

[node name="OpenTimer" type="Timer" parent="." index="3"]
wait_time = 0.8
one_shot = true

[node name="CloseTimer" type="Timer" parent="." index="4"]
wait_time = 1.6
one_shot = true

[connection signal="area_entered" from="hitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="hitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="timeout" from="OpenTimer" to="." method="_on_open_timer_timeout"]
[connection signal="timeout" from="CloseTimer" to="." method="_on_close_timer_timeout"]
